objects/Ispezione_II_Livello__c.object
<CustomObject>
    <description>Oggetto relativo allo stream di HSEQ/CQS</description>
    <fields>
        <fullName>CQS_Isp2L_AL2_Dati_NotPrel_ComplCorr__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>I dati inseriti nella Notifica Preliminari sono completi e corretti</inlineHelpText>
        <label>Dati Notifica Prel completi e corretti</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL2_Idoneita_TecProf_ImpEsec__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Verifica dell’idoneità tecnico professionale delle imprese esecutrici</inlineHelpText>
        <label>Idoneità Tecnico Professionale Imp Esec</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL2_Nomina_CoordSic_faseEsec__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Nomina del Coordinatore per la Sicurezza in fase di Esecuzione</inlineHelpText>
        <label>Nomina Coord Sicurezza fase Esecuzione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL2_Nomina_CoordSic_faseProg__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Nomina del Coordinatore per la Sicurezza in fase di Progettazione</inlineHelpText>
        <label>Nomina Coord Sicurezza fase Progettazion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL2_OpCoordSic_faseEsec__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Verifica dell’operato del Coordinatore per la Sicurezza in fase di Esecuzione</inlineHelpText>
        <label>Operato Coord.re Sicurezza fase Esec.ne</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL2_Part_RiunGovern_OF__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Partecipazione riunione di governance indette da O.F.</inlineHelpText>
        <label>Partecipazione riunione governance OF</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL2_PartecRiunCoordPeriod__c</fullName>
        <inlineHelpText>Partecipazione alle Riunioni di Coordinamento periodiche</inlineHelpText>
        <label>Partecipazione Riunioni Coord.to period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL2_RL_collaborativo__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Il R.L. si dimostra collaborativo</inlineHelpText>
        <label>Il RL si dimostra collaborativo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL2_RL_presente__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Il R.L. si dimostra presente</inlineHelpText>
        <label>Il RL si dimostra presente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL2_RL_reattivo__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Il R.L. si dimostra reattivo</inlineHelpText>
        <label>Il RL si dimostra reattivo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL2_Trasm_Coord_Sic_ImpEsec__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Trasmissione dei nominativi dei Coordinatori per la Sicurezza alle imprese esecutrici</inlineHelpText>
        <label>Trasmissione Coord Sicurezza ImpreseEsec</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL2_Trasm_NotPrelim_orgComp__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Trasmissione della Notifica Preliminare agli organi competenti</inlineHelpText>
        <label>Trasm.ne Notif Prelim organi competenti</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL2_Trasmissione_PSC_ImpAff__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Trasmissione del PSC alle imprese affidatarie</inlineHelpText>
        <label>Trasmissione PSC imprese affidatarie</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL3_CheckCollVerbRisolProbl__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Svolgimento controlli in fase di collaudo con redazione verbali e verifica di risoluzione irregolarità/difetti (vedi nota1)</inlineHelpText>
        <label>Check collaudo,verbali risoluzione probl</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL3_CheckCongrVerAppaltatori__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Verifica contabilità finale delle opere e della congruenza fra quanto dichiarato dagli Appaltatori e quanto verificato</inlineHelpText>
        <label>Check congruenza Verifiche Appaltatori</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL3_CheckCorrispLavoriEProg__c</fullName>
        <inlineHelpText>Verifica corretta corrispondenza tra le opere in corso di realizzazione ed il progetto dell&apos;opera</inlineHelpText>
        <label>Check corrispondenza lavori e progetti</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL3_CheckErisoluz_problemi__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <description>Controlli redazione verbali verifica risoluzione problemi</description>
        <inlineHelpText>Svolgimento dei controlli in corso d&apos;opera con redazione verbali e verifica di risoluzione irregolarità/difetti (Min 2/week)</inlineHelpText>
        <label>Check,verbali,verifica,risoluz problemi</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL3_CheckRifNormeAmbiente__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Verifica corretta gestione dei rifiuti e della normativa in tema ambientale (verifica FIR e documenti carico/scarico) (Min 2/week)</inlineHelpText>
        <label>Check gest rifiuti e norme tema ambiente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL3_CheckRiprVerbRisolProbl__c</fullName>
        <inlineHelpText>Svolgimento controlli dei ripristini provvisori e definitivi con redazione verbali e verifica di risoluzione irregolarità (Min 2/week)</inlineHelpText>
        <label>Check ripristini,verbali, risol.ne probl</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL3_ConvocRiunAvaLavImp__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Convocazione delle riunioni di Stato di Avanzamento Lavori con le imprese (Min 1/mese)</inlineHelpText>
        <label>Convoc.ne riunioni avanz.nto lav imprese</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL3_DL_collaborativo__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <label>Il D.L. si dimostra collaborativo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL3_DL_presente__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <label>Il D.L. si dimostra presente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL3_DL_reattivo__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <label>Il D.L. si dimostra reattivo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL3_GestVarInCorsoDopera__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Gestione delle varianti in corso d&apos;opera</inlineHelpText>
        <label>Gestione delle varianti in corso d&apos;opera</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL3_MonitRispCronoprogrLav__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Monitoraggio rispetto del cronoprogramma lavori</inlineHelpText>
        <label>Monitoraggio rispetto cronoprogramma lav</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL3_PartecRiunCoordDaCSE__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Partecipazione riunione di coordinamento indette dal CSE (Min 75%)</inlineHelpText>
        <label>Partecipazione riunione coord.nto CSE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL3_RedazioneVerbali__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Redazione di verbali (sospensione, ripresa, OdS, ecc)</inlineHelpText>
        <label>Redazione verbali</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL3_SupportoGestioneLegale__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Supporto nella “Gestione legale”. 
Raccolta di documentazione, effettuazione verifiche in loco, tracciamento attività/sinistri</inlineHelpText>
        <label>Supporto &quot;Gestione Legale&quot;</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL4_CSE_AttivPartecRiunPer__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Il CSE partecipa attivamente alle riunioni periodiche</inlineHelpText>
        <label>Partecipa attiva.nte riunioni periodiche</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL4_CSE_presente__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <label>Il CSE si dimostra presente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL4_CSE_reattivo__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <label>Il CSE si dimostra reattivo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL4_ConvRiunCoordPeriod__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Convocazione Riunioni di Coordinamento periodiche (Min 1/mese)</inlineHelpText>
        <label>Convoc.ne Riunioni Coord.nto periodiche</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL4_SoprallVerbSegnNoConf__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Esecuzione sopralluoghi e redazione dei verbali e segnalazione non conformità (Min 2/week)</inlineHelpText>
        <label>Sopralluoghi verbali segnal.ni non conf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL4_TempiCheckDocSuZSSok__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Verifica ed approvazione dei documenti su portale Zucchetti Safety Solution in tempi congrui</inlineHelpText>
        <label>Tempi check e approv.ne doc su ZSS ok</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL4_TempiRendEventiLasPrevisto__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <description>Rendicontazione tempistica prevista eventi lievi</description>
        <inlineHelpText>Rendicontazione nella tempistica prevista tutti gli eventi lievi (Max 24h)</inlineHelpText>
        <label>Tempi rendiconto eventi L come previsto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL4_TempiRendEventiMGasPrev__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Rendicontazione nella tempistica prevista tutti gli eventi medi-gravi (Max 16h)</inlineHelpText>
        <label>Tempi rendiconto eventi MG come previsto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL4_TempiRendInfortasPrevisto__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Rendicontazione nella tempistica prevista tutti gli infortuni (Max 6h)</inlineHelpText>
        <label>Tempi rendiconto Infortuni come previsto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_AL4_TrasmPSCeAggRLeImp__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Trasmissione del P.S.C. e dei suoi aggiornamenti al RL e alle imprese</inlineHelpText>
        <label>Trasmissione PSC e aggiornamenti RL/Imp</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_ArchDocTempoBox__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Archiviazione della documentazione prodotta su portale Tempo box (verbali, OdS, comunicazioni, ecc)</inlineHelpText>
        <label>Archiviazione documentazione Tempo box</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_Check_EquiSbiltoImpCr__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Distribuzione equa dei controlli per tutte le imprese o sbilanciamenti dovuti alla presenza di imprese &quot;critiche&quot;</inlineHelpText>
        <label>Check Imp equi/sbil.to Imp &quot;critiche&quot;</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_Comune__c</fullName>
        <label>Comune</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_LDO__c</fullName>
        <label>LDO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_Nominativo__c</fullName>
        <label>Nominativo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_Note_AdContr__c</fullName>
        <label>Note Adempimenti Contrattuali</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_Note_Altro__c</fullName>
        <label>Note Altro</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_Note_Generali__c</fullName>
        <label>Note Generali</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_Progetto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Progetto</label>
        <referenceTo>CQS_Progetto__c</referenceTo>
        <relationshipName>Ispezioni_II_Livello</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_RedPSCcostAgg__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Redazione del P.S.C. e costante aggiornamento</inlineHelpText>
        <label>Redazione PSC e costante aggiornamento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Isp2L_ReportAdeguato_toFM__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Il R.L. assicura adeguato reporting al Field manager secondo le modalità e le tempistiche concordate?</inlineHelpText>
        <label>Reporting Adeguato a FM come concordato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspIIL_AL1_ContrSupp_progeEsec__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>La risorsa svolge attività di controllo della correttezza dei progetti e della loro congruità in termini tecnico ed economici, supporta i progettisti esecutivi</inlineHelpText>
        <label>Controllo supporto progettisti esecutivi</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspIIL_AL1_N_RisOp_ConfContratto__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <description>Il numero di risorse operative è conforme a quanto previsto da contratto</description>
        <inlineHelpText>Il numero di risorse operative è conforme a quanto previsto da contratto</inlineHelpText>
        <label>N° risorse operative conforme contratto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspIIL_AL1_Note_ConstrManagement__c</fullName>
        <label>Note Construction Management</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>